Correction Alberto et Andrea

--- a/Chap2-DoubleBeta.tex
+++ b/Chap2-DoubleBeta.tex
@@ -194,7 +194,7 @@
 \bigskip
 
 
-\NI where G$_{\text{2}\nu}$ is the four-body phase space factor that can be well calculated analytically and M$_{\text{2}\nu}$ is the nuclear matrix element (NME) for the decay. The computation of the NME are not trivial and are strongly model-dependent. More details about NME will be given in Section~\ref{sec:NME}.
+\NI where G$_{\text{2}\nu}$ is the four-body phase space factor that can be well calculated analytically and M$_{\text{2}\nu}$ is the nuclear matrix element (NME) for the decay. More details about NME will be given in Section~\ref{sec:NME}.
 
 
 \bigskip
@@ -305,14 +305,15 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI Violating lepton number conservation this decay is forbidden in SM and has never been observed. As this decay is only possible if neutrinos are massive and is a Majorana particle, it constitutes a sensitive method for testing the Majorana nature of neutrinos~\cite{RacahNeutrinolessDBDMajorana}. All candidates for 2$\nu\beta\beta$~decay are also candidates for 0$\nu\beta\beta$~decay but, a priori, there is no correlation between the two decay rates. 
+\NI Violating lepton number conservation this decay is forbidden in SM and has never been observed. As this decay is only possible if neutrinos are massive and is a Majorana particle, it constitutes a sensitive method for testing the Majorana nature of neutrinos~\cite{RacahNeutrinolessDBDMajorana}. All candidates for 2$\nu\beta\beta$~decay are also candidates for 0$\nu\beta\beta$~decay and, a priori, there is no correlation between the two decay rates. 
 
 
 \bigskip
 
 
 
-\NI Many hypothetical mechanisms might mediate the 0$\nu\beta\beta$~decay. The most common of them are the neutrino mass mechanism, right-handed current and Majoron emission modes presented in Sections~\ref{sec:NMM} and~\ref{sec:OtherMechanisms}. In these mechanisms it is clear that the neutrino must be a Majorana particle. But other mechanisms exist, not presented herein, such as R-parity violating supersymmetry or extra dimensions to explain 0$\nu\beta\beta$. In some of these mechanisms, no neutrinos are involved and it is not apparent that 0$\nu\beta\beta$~decay confirms the Majorana nature of neutrino~\cite{SUSYandDBD}. In 1980, Schechter and Valle demonstrated that whatever the underlying mechanism, the observation of 0$\nu\beta\beta$ implies Majorana neutrinos~\cite{SchechterValle}. They replaced the 0$\nu\beta\beta$ mechanism with a "Black Box", shown in Figure~\ref{0nubbBlackBox} and confirmed that there exists a propagator that converts antineutrinos into neutrino as it is required for a Majorana mass, as explained in Section~1.3.2. 
+\NI Many hypothetical mechanisms might mediate the 0$\nu\beta\beta$~decay. The most common of them are the neutrino mass mechanism, right-handed current and Majoron emission modes presented in Sections~\ref{sec:NMM} and~\ref{sec:OtherMechanisms}. In these mechanisms it is clear that the neutrino must be a Majorana particle. But other mechanisms exist, not presented herein, such as R-parity violating supersymmetry~\cite{SUSYandDBD}. In some of these mechanisms, no neutrinos are involved and it is not evident that 0$\nu\beta\beta$~decay confirms the Majorana nature of neutrino~\cite{SUSYandDBD}. In 1980, Schechter and Valle introduced a "black box" diagram depicting this decay~\cite{SchechterValle}. This black box is shown in~Figure~\ref{0nubbBlackBox} and demonstrates that regardless of the underlying mechanism, the 0$\nu\beta\beta$ decay requires Majorana neutrinos.  
+
 
 \smallskip
 
@@ -339,7 +340,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI where G$_{\text{0}\nu}$ is a two-body phase space factor which is well kwown, M$^\text{2}_{\text{0}\nu}$ is the 0$\nu\beta\beta$ NME, which is not trivial to evaluate due to the high number of nucleons, and $\eta$ is a lepton violating number parameter which takes into account all the physics behind the 0$\nu\beta\beta$ mechanism. This parameter varies according to the mechanism via which 0$\nu\beta\beta$ is mediated.  
+\NI where G$_{\text{0}\nu}$ is a two-body phase space factor which is well kwown, M$^\text{2}_{\text{0}\nu}$ is the 0$\nu\beta\beta$ NME, and $\eta$ is a lepton violating number parameter which takes into account all the physics behind the 0$\nu\beta\beta$ mechanism. This parameter varies according to the mechanism via which 0$\nu\beta\beta$ is mediated.  
 
 
 \FloatBarrier
@@ -677,38 +678,39 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 
 \bigskip
 
-\NI The choice of the $\beta\beta$ isotope is also important when looking to maximise the signal. Indeed, as shown in Eq.~\ref{eq:decayRate2nu} and~\ref{eq:halflife0nu} the phase space factors and the NME are related with the decay rate. Isotopes with high phase space factor and NME have a shorter half-live compared to the others. As a result, in the same amount of time, more decays can occur, which makes their detection more likely. Note that the molar mass of the isotope plays also a role in the total number of atoms but is generally not considered since it is a secondary consideration compared to the phase space factor and NME parameters.
+\NI The choice of the $\beta\beta$ isotope is also important when looking to maximise the signal. Indeed, as shown in Eq.~\ref{eq:decayRate2nu} and~\ref{eq:halflife0nu} the phase space factors and the NME are related with the decay rate. Isotopes with high phase space factor and NME have a shorter half-live compared to the others. As a result, in the same amount of time, more decays can occur, which makes their detection more likely. 
 
 
 \bigskip
 
 
-\NI Finally, the natural abundance and the ability to enrich an isotope must be taken into consideration. To reach a considerable mass of $\beta\beta$ isotope, it is simpler and cheaper if the isotope is already present in large quantities in nature. Depending on the isotope, different enrichment techniques exist having different yields and prices. The majority of the isotopes can be enriched via centrifugation method which is relatively cheap and allows the enrichment up to large mass. For some isotopes, such as $^{48}$Ca, only electromagnetic separation is available, which only allow the enrichment of smaller quantities.
+\NI The molar mass of the isotope also plays a role in the maximization of the signal since it influences the total number of atoms in the sample. This parameter is generally not considered since there is a factor around 5 between the lighter and the heavier  isotopes ($^{46}$Ca and $^{238}$U) which is neglectable compared to the G$^{\text{0}\nu}$ which can variates over a factor around 2.10$^{\text{4}}$ depending on the isotpe ($^{\text{80}}$Se and $^{\text{150}}$Nd). 
+
+
+\bigskip
+
+
+\NI The natural abundance and the ability to enrich an isotope must be taken into consideration. To reach a considerable mass of $\beta\beta$ isotope, it is simpler and cheaper if the isotope is already present in large quantities in nature. Depending on the isotope, different enrichment techniques exist having different yields and prices. The majority of the isotopes can be enriched via centrifugation method which is relatively cheap and allows the enrichment up to large mass. For some isotopes, such as $^{\text{48}}$Ca, only electromagnetic separation is available, which only allow the enrichment of smaller quantities.
 
 
 \subsection{Minimising background}\label{sec:MinimisingBkg}
 
 
-\NI In the scenario of a background-free experiment, Eq~\ref{eq:sensitivity0nu} becomes linear, explaining why it is important to reduce the background :
+\NI By looking at the Equation~\ref{eq:sensitivity0nu} which assumes a gaussian background it makes sense that an ideal 0$\nu\beta\beta$ experiment should minimize the b$\times\Delta$E term to increase the half-life sensitivity. As seen before, $\beta\beta$ decays is a very rare process, in which two electrons are emitted with a typical energy of a few MeV (2.0 - 4.3~MeV depending on the isotope). The main background in the search for $\beta\beta$ decay is the natural radioactivity in which particles with similar energy are emitted. The two main isotopes to the background are the radioactive elements $^{\text{214}}$Bi and $^{\text{208}}$Tl, which are naturally present in small quantities in the materials from the $^{\text{238}}$U and $^{\text{232}}$Th decay chains shown in Figure~\ref{u238-th232decayChain}. The electrons and photons emitted during the decays can by difference processes such as Bremsstrahlung, Compton or Möller scatterings mimic the 2e signal. To suppress this background, the detector materials must be carefully chosen to be radiopure. Futhermore, to reduce the $^{\text{214}}$Bi and $^{\text{208}}$Tl contributions, it is preferable to select an $\beta\beta$ isotope with a high Q$_{\beta\beta}$ value to get away from the natural radioactivity, the highest energy $\gamma$-ray in the decay chain of $^{\text{238}}$U and $^{\text{232}}$Th is emitted by $^{\text{208}}$Tl at 2.6~MeV).
 
 
-\begin{equation}
-\text{T}_{\text{1/2}}^{0\nu} (\text{n}_\sigma) = \frac{\text{4.16}~\times~\text{10}^{\text{26}}~\text{y}}{\text{n}_\sigma} \left(\frac{\epsilon \text{a}}{\text{W}} \right) \times \text{MT}
-\end{equation}
+\bigskip  
+
+%\NI In the scenario of a background-free experiment, this equation becomes linear, explaining why it is important to reduce the background :
+
+%begin{equation}
+%\text{T}_{\text{1/2}}^{0\nu} (\text{n}_\sigma) = \frac{\text{4.16}~\times~\text{10}^{\text{26}}~\text{y}}{\text{n}_\sigma} \left(\frac{\epsilon \text{a}}{\text{W}} \right) \times \text{MT}
+%\end{equation}
+
+%\NI As seen before, $\beta\beta$ decays is a very rare process, in which two electrons are emitted with a typical energy of a few MeV (2.0 - 4.3 MeV depending on the isotope). The main background in the search for $\beta\beta$ decay is the natural radioactivity in which particles with similar energy are emitted. 
 
 
-\NI As seen before, $\beta\beta$ decays is a very rare process, in which two electrons are emitted with a typical energy of a few MeV (2.0 - 4.3 MeV according the isotope). The main background in the search for $\beta\beta$ decay is the natural radioactivity in which particles with similar energy are emitted. To suppress this background, the detector materials must be carefully chosen to be radiopure.
-
-
-\bigskip
-
-
-\NI The two main isotopes to the background are the radioactive elements $^{\text{214}}$Bi and $^{\text{208}}$Tl, which are naturally present in small quantities in the materials from the $^{\text{238}}$U and $^{\text{232}}$Th decay chains shown in Figure~\ref{u238-th232decayChain}. The highest energy $\gamma$-ray is emitted by $^{\text{208}}$Tl at 2.6~MeV. To highly reduce these two contributions, it is preferable to select an isotope with a high Q$_{\beta\beta}$ value.
-
-
-\bigskip
-
-\NI Another source of background comes from cosmic rays. To reduce it, the experiments are placed in an underground laboratory which is sheltered from the muon flux. Futhermore, shieldings are generally used to protect the detector from the natural radioactivity of the surrounding laboratory rocks. This background is mainly under the form of $\gamma$-rays and neutrons from spontaneous fission of uranium.
+\NI Another source of background comes from cosmic rays. To reduce it, the experiments are placed in an underground laboratory where the muon flux is highly suppressed. Futhermore, shieldings are generally used to protect the detector from the neutrons coming from muons spallation on nuclei and natural radioactivity of the surrounding laboratory rocks.
 
 
 \bigskip
@@ -744,7 +746,8 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \subsection{Semiconductor experiments}
 
 
-\NI The semiconductor experiments use a $\beta\beta$ isotope which acts as both the source and the detector material. The $\beta\beta$ isotope, usually~$^{\text{76}}$Ge, is placed between two electrodes to form a diode. Ionizing radiation creates electron-hole pairs in the material. The electrons are drifted towars the electrodes and produce signals which are proportional to the total energy of the decay. Due to their homogeneous design, semiconductor experiments have a very high acceptance and detection efficiency. These detectors typically work at cryogenic temperatures, to suppress the electronic noise. This has also the advantage of obtaining a very good energy resolution, $\sim$~0.3~\% FWHM at the Q$_{\beta\beta}$ value of $^{\text{76}}$Ge~\cite{QbetabetaGe}. By using the segmentation of the semiconductors and by analysing the electrode pulse shapes some background events can be removed. These detectors have only access to the total energy deposit and can not measure the full topology of the two electrons being emitted. Five old and recent semiconductor experiments are decribed in the following section.
+\NI Some semiconductors such as germanium have some isotopes which undergoes $\beta\beta$ decays, and can be used both as $\beta\beta$ decay source and detector. The $\beta\beta$ isotope, usually~$^{\text{76}}$Ge, is placed between two electrodes. Ionizing radiation creates electron-hole pairs in the material. The electrons are drifted towars the electrodes and produce signals which are proportional to the total energy of the decay. Due to their homogeneous design, semiconductor experiments have a very high acceptance and detection efficiency. These detectors typically work at cryogenic temperatures, to suppress the electronic noise. This has also the advantage of obtaining a very good energy resolution, $\sim$~0.3~\% FWHM at the Q$_{\beta\beta}$ value of $^{\text{76}}$Ge~\cite{QbetabetaGe}. %By using the segmentation of the semiconductors and by analysing the electrode pulse shapes some background events can be removed. 
+These detectors have only access to the total energy deposit and can not measure the full topology of the two electrons being emitted. Five old and recent semiconductor experiments are decribed in the following section.
 
 
 \subsubsection{Heidelberg-Moscow}
@@ -792,19 +795,16 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip 
 
 
-\NI Installed at LNGS, GERDA took data, in a first phase, from Nov. 2011 to May 2013 for a total exposure of 21.6~kg~y. No 0$\nu\beta\beta$ signal has been observed, as shown in Figure~\ref{GERDAresults} and a limit of T$_{\text{1/2}}^{0\nu}$~>~2.1~$\times$~10$^{\text{25}}$~y has been set which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~240~-~480~meV~\cite{GERDA}.
+\NI Installed at LNGS, GERDA took data, in a first phase, from November 2011 to May 2013 for a total exposure of 21.6~kg~y. No 0$\nu\beta\beta$ signal has been observed, and a limit of T$_{\text{1/2}}^{0\nu}$~>~2.1~$\times$~10$^{\text{25}}$~y has been set which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~240~-~480~meV~\cite{GERDA}. In a second phase, 20~kg of enriched $^{\text{76}}$Ge have be added. GERDA collects data since December 2015 and no hint of 0$\nu\beta\beta$ signal has been found in the combined data as shown in Figure~\ref{GERDAresults}. A limit has been set to T$_{\text{1/2}}^{0\nu}$~>~5.3~$\times$~10$^{\text{25}}$~y at 90\% C.L. corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~150~-~330~meV.
 
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.3]{pictures/Chap2/GERDAresults.png}
-\caption{Energy spectrum from the first phase of GERDA. The plot at the top shows the region used for background interpolation. The bottom plot shows the region around Q$_{\beta\beta}$. The 0$\nu\beta\beta$ signals for the 90\% CL from GERDA and the H-M claim are also shown~\cite{GERDA}.}
+\includegraphics[scale=0.45]{pictures/Chap2/GerdaPhase2.pdf}
+\caption{Combined Phase I data (top), Phase II coaxial (middle) and BEGe detector spectra (bottom) in the analysis window. The red histogram is the final spectrum, the filled grey one without pulse shape discrimination and the open one in addition without argon veto cut. The blue line is the fitted spectrum together with a hypothetical signal corresponding to the 90\% C.L. limit of T$_{\text{1/2}}^{0\nu}$~>~5.3~$\times$~10$^{\text{25}}$~y~\cite{GERDAphase2}.}
 \label{GERDAresults}
 \end{center}
 \end{figure}
-
-
-\NI In the next phase of the experiment, 20~kg of enriched $^{\text{76}}$Ge will be added to reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~50~-~100~meV~\cite{GERDAprospective}.
 
 
 \FloatBarrier
@@ -824,7 +824,27 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decays with enrich
 \subsubsection{COBRA}
 
 
-\NI Most of the semiconductor experiments use germanium detectors but other semiconductor technologies can provide competitive results. The COBRA experiment (Cadmium zinc telluride 0-neutrino double-Beta Research Apparatus) runs at LNGS and searches for 0$\nu\beta\beta$ decays with an array of CdZnTe semiconductors enriched in $^{\text{116}}$Cd. The energy resolution of this semiconductor is not as good as with HPGe experiments but it operates at room temperature. Thanks to the pixellated array, the tracking and identification of the particles is possible which reduces the background level. The experiment is in a R\&D phase to increase the energy resolution and reduce the background rate in order to reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~50~-~70~meV with 420~kg~\cite{COBRA}.
+\NI Most of the semiconductor experiments use germanium detectors but other semiconductor technologies can provide competitive results. The COBRA experiment (Cadmium zinc telluride 0-neutrino double-Beta Research Apparatus) runs at LNGS and searches for 0$\nu\beta\beta$ decays among 5 $\beta\beta$ isotopes ($^{\text{70}}$Zn,$^{\text{114}}$Cd,$^{\text{116}}$Cd,$^{\text{128}}$Te and $^{\text{128}}$Te) with an array of CdZnTe semiconductors. The energy resolution of this semiconductor is not as good as with HPGe experiments ($\sim$ 30~keV at 2800~keV) but it operates at room temperature. Thanks to the pixellated array, the tracking and identification of the particles is possible which reduces the background level ($\sim$ 1~count/keV/kg/y at 2800~keV is expected). In its demonstrator phase, COBRA comprises 64 CdZnTe coplanar-grid semiconductor detectors arranged in 4$\times$4 detectors. After an exposure of 234.7~kg.d no signal of 0$\nu\beta\beta$ has been found. The limits set on the five isotopes are reported in Table~\ref{tab:CobraResultsDemonstrator} such as their Q$_{\beta\beta}$ value and the measured background for the different R.O.I.~\cite{CobraDemonstrator}.
+
+
+\begin{table}
+\centering
+\begin{tabular}{c|c|c|c}
+\toprule
+Isotope & Q$_{\beta\beta}$ [keV] & b [cts./keV/kg/yr] & T$_{\text{1/2}}^{0\nu}$ [$\times$ 10$^{\text{21}}$~y] at 90\% C.L. \\[0.1cm]
+\hline
+$^{\text{70}}$Zn  & 997  & 4.51$^{+\text{0.6}}_{-\text{1.0}}$  & 6.8 $\times$ 10$^{-\text{3}}$ \\[0.1cm]
+$^{\text{114}}$Cd & 543  & 219.9$^{+\text{1.0}}_{-\text{1.7}}$ & 1.6 \\[0.1cm]
+$^{\text{116}}$Cd & 2814 & 2.7$^{+\text{0.1}}_{-\text{0.2}}$   & 1.1 \\[0.1cm]
+$^{\text{128}}$Te & 867  & 65.5$^{+\text{0.5}}_{-\text{1.6}}$  & 1.9 \\[0.1cm]
+$^{\text{130}}$Te & 2528 & 3.6$^{+\text{0.1}}_{-\text{0.3}}$   & 6.1 \\[0.1cm]
+\bottomrule
+\end{tabular}
+\caption{Results on the 0$\nu\beta\beta$ half-life decay rate of the COBRA in its demonstrator phase.}
+\label{tab:CobraResultsDemonstrator}
+\end{table}
+
+%The experiment is in a R\&D phase to increase the energy resolution and reduce the background rate in order to reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~50~-~70~meV with 420~kg~\cite{COBRA}.
 
 
 \subsection{Scintillation experiments}
@@ -836,20 +856,20 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decays with enrich
 \bigskip
 
 
-\NI Two sorts of scintillation experiments exist. In the first one, the $\beta\beta$ isotope is inherently a part of the scintillator as was the case in the ELEGANT~V experiment. In the second one, a large volume of liquid scintillator is used in which a $\beta\beta$ isotope is dissolved. This second type suffers from poor energy resolution but the mass of isotopes can be readily increased to study a large scale volume.
+%\NI Two sorts of scintillation experiments exist. In the first one, the $\beta\beta$ isotope is inherently a part of the scintillator as was the case in the ELEGANT~V experiment. In the second one, a large volume of liquid scintillator is used in which a $\beta\beta$ isotope is dissolved. This second type suffers from poor energy resolution but the mass of isotopes can be readily increased to study a large scale volume.
 
 
 
 \subsubsection{ELEGANT VI}
 
 
-\NI The ELEGANT VI experiment searched for 0$\nu\beta\beta$ decay in 23 CaF$_\text{2}$(Eu) crystal scintillators with 7.6~g of enriched~$^{\text{48}}$Ca. With an exposure of 0.015~kg~y, the experiment set a limit on the half-life to be T$_{\text{1/2}}^{0\nu}$~>~5.8~$\times$~10$^{\text{22}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~3.2~-~22~meV~\cite{ELEGANTVI}. The experiment operated in Kamioka. \\
+\NI Operating in Kamioka, the ELEGANT VI experiment searched for 0$\nu\beta\beta$ decay in 23 CaF$_\text{2}$(Eu) crystal scintillators with 7.6~g of enriched~$^{\text{48}}$Ca. With an exposure of 0.015~kg~y, the experiment set a limit on the half-life to be T$_{\text{1/2}}^{0\nu}$~>~5.8~$\times$~10$^{\text{22}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~3.2~-~22~meV~\cite{ELEGANTVI}.
 
 
 \subsubsection{CANDLESIII}
 
 
-\NI The CANDLES experiments operate in Kamioka and are similar in design to ELEGANT~VI. CANDLES~III consists of 305~CaF$_\text{2}$ crystals, for a total mass of 305~kg, placed in a liquid scintillator surrounded by PMTs. The experiment is currently taking data and a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~$\sim$~500~eV is expected~\cite{CANDLESIII}.
+\NI The CANDLES experiments operate in Kamioka and consists of 305~CaF$_\text{2}$ crystals, for a total mass of 305~kg, placed in a liquid scintillator surrounded by PMTs. The experiment is currently taking data and a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~$\sim$~500~eV is expected~\cite{CANDLESIII}.
 
 
 \subsubsection{KamLAND-Zen}
@@ -861,22 +881,26 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decays with enrich
 \bigskip
 
 
-\NI The energy spectrum of the electron obtained after the first phase is shown in Figure~\ref{KamLANDZenResults}. The experiment identified an unexpected background contributions in the 0$\nu\beta\beta$~ROI coming from the surface of the inner balloon. These backgrounds are attributed to the radioactive fallout from the Fukushima accident. The experiment decided to a halt in order to purify the inner ballon. Despite this unexpected contamination, KamLAND-Zen still provides the strongest single constraint on $\langle \text{m}_{\beta\beta} \rangle$ for any isotope. With an exposure of 89.5~kg~y, a limit of T$_{\text{1/2}}^{0\nu}$~>~1.9~$\times$~10$^{\text{25}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~120~-~250~meV is obtained~\cite{KamLAND-Zen}.
+\NI In a first phase the experiment identified an unexpected background contributions in the 0$\nu\beta\beta$~ROI coming from the surface of the inner balloon. These backgrounds are attributed to the radioactive fallout from the Fukushima accident. The experiment decided to a halt in order to purify the inner ballon. The experirement restarts after the ballon purification for a second phase, and reaches by combining the two phases a limit for the 0$\nu\beta\beta$ decay half-life of T$_{\text{1/2}}^{0\nu}$~>~1.06~$\times$~10$^{\text{26}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~61~-~165~meV which is the strongest single constraint on $\langle \text{m}_{\beta\beta} \rangle$ for any isotope~\cite{KamLAND-ZenRecent}.    
+
+
+%Despite this unexpected contamination, KamLAND-Zen still provides the strongest single constraint on $\langle \text{m}_{\beta\beta} \rangle$ for any isotope. With an exposure of 89.5~kg~y, a limit of T$_{\text{1/2}}^{0\nu}$~>~1.9~$\times$~10$^{\text{25}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~120~-~250~meV is obtained~\cite{KamLAND-Zen}.
 
 
 %KamLAND-Zen2 Majoron emission \cite{KamLAND-Zen2} \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.3]{pictures/Chap2/KamLANDZenResults.png}
-\caption{Energy spectrum showing the first result from KamLAND-Zen. The considerable background at 2.46~MeV was not expected to be so high, in particular $^{\text{111m}}$Ag~\cite{KamLAND-Zen}.}
+\includegraphics[scale=0.5]{pictures/Chap2/fig2a.pdf}
+%\caption{Energy spectrum showing the first result from KamLAND-Zen. The considerable background at 2.46~MeV was not expected to be so high, in particular $^{\text{111m}}$Ag~\cite{KamLAND-Zen}.}
+\caption{Energy spectrum of the selected $\beta\beta$ candidates.}
 \label{KamLANDZenResults}
 \end{center}
 \end{figure}
 
 
 
-\NI In a second phase of the experiment, the detector will be upgraded to contain 1~tonne of $^{\text{136}}$Xe with an improvement of the light collection. The expected sensitivity is $\langle \text{m}_{\beta\beta} \rangle$~$\sim$~20~meV~\cite{KamLAND-Zen3}.
+\NI In a future phase of the experiment, the detector will be upgraded to contain 1~tonne of $^{\text{136}}$Xe with an improvement of the light collection. The expected sensitivity is $\langle \text{m}_{\beta\beta} \rangle$~$\sim$~20~meV~\cite{KamLAND-Zen3}.
 
 
 \FloatBarrier
@@ -885,7 +909,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decays with enrich
 \subsubsection{SNO+}
 
 
-\NI The SNO+ experiment follows the same principe to KamLAND-Zen. The experiment will operate in SNOlab and will reuse the acrylic sphere used in the SNO experiment. In a first phase, 800~kg of~$^{\text{130}}$Te, will be dissolved in 780~tonnes of liquid scintillator and introduced in the 12~m in diameter sphere. Approximately 9500 PMTs will be used to read out the scintillation light. With 5~y of data taking, SNO+ will reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~55~-~133~meV. In a hypothetical second phase, the mass of $^{\text{130}}$Te could be increased by a factor 10 and provide sensitivity up to  $\langle \text{m}_{\beta\beta} \rangle$~<~19~-~46~meV~\cite{SNO+}.
+\NI The SNO+ experiment follows the same principe to KamLAND-Zen. The experiment will operate in SNOlab and will reuse the acrylic sphere used in the SNO experiment. In a first phase, 800~kg of~$^{\text{130}}$Te, will be dissolved in 780~tonnes of liquid scintillator and introduced in the 12~m in diameter sphere. Approximately 9500 PMTs will be used to read out the scintillation light. With 5~y of data taking, SNO+ will reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~55~-~133~meV. In a second phase, the mass of $^{\text{130}}$Te could be increased by a factor 10 and provide sensitivity up to  $\langle \text{m}_{\beta\beta} \rangle$~<~19~-~46~meV~\cite{SNO+}.
 
 
 \subsection{Bolometer experiments}
@@ -894,22 +918,35 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decays with enrich
 \NI The bolometer experiments detect the ionizing radiations by measuring small increases in temperature of a material. The increase of the temperature changes the electrical properties of the medium which can be measured and related to the ionizing particle energy. These detectors operate at very low temperature, on the order of~mK, to obtain very good energy resolution. They also measure only the total energy deposited by the particle and does not have good particle identification capabilities make challenging the background identification.
 
 
-\subsubsection{CUORICINO}
-
-
-\NI The CUORICINO experiment ran at LNGS between 2003 and 2008, and searched for 0$\nu\beta\beta$ decay in 507~g of~$^{\text{130}}$Te. The experiment consisted of a tower array of 62~Te0$_\text{2}$ crystals placed in a cryostat. With a total of 19.75~kg~y, a limit has been set to T$_{\text{1/2}}^{0\nu}$~>~2.8~$\times$~10$^{\text{24}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~300~-~700~meV~\cite{CUORICINO}
-
-
 \subsubsection{CUORE}
 
 
-\NI CUORE (Cryogenic Underground Observatory for Rare Events) is the continuation of the CUORICINO experiment. The number of Te0$_\text{2}$ crystals will be increased to 988 to reach a mass of 204~kg in~$^{\text{130}}$Te. The expected sensitivity is T$_{\text{1/2}}^{0\nu}$~>~2.1~$\times$~10$^{\text{26}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~35~-~82~meV. A prototype detector, CUORE-0, consisting of 52 crystals and 10.7~kg of $^{\text{130}}$Te is currently running. A first limit has been set to T$_{\text{1/2}}^{0\nu}$~>~8~$\times$~10$^{\text{24}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~180~-~420~meV~\cite{CUORE} .
+\NI The CUORICINO experiment was a prototype of the CUORE experiment (Cryogenic Underground Observatory for Rare Events). It ran at LNGS between 2003 and 2008, and searched for 0$\nu\beta\beta$ decay in 507~g of~$^{\text{130}}$Te.  The experiment consisted of a tower array of 62~Te0$_\text{2}$ crystals placed in a cryostat. With a total of 19.75~kg~y, a limit has been set to T$_{\text{1/2}}^{0\nu}$~>~2.8~$\times$~10$^{\text{24}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~300~-~700~meV~\cite{CUORICINO}.
+
+
+\bigskip
+
+
+\NI CUORE is the next generation experiment extending the CUORICINO concept to a larger array of bolometers. The full CUORE detector will contain 988 Te0$_\text{2}$ crystals (204~kg of~$^{\text{130}}$Te) to reach an expected sensitivity of T$_{\text{1/2}}^{0\nu}$~>~2.1~$\times$~10$^{\text{26}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~35~-~82~meV. A demonstrator module, CUORE-0, consisting of 52 crystals and 10.7~kg of $^{\text{130}}$Te is currently running. A first limit has been set to T$_{\text{1/2}}^{0\nu}$~>~8~$\times$~10$^{\text{24}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~270~-~760~meV~\cite{CUORE}.
+
+
+\subsection{Scintillating bolometer experiments}
+
+
+New detectors will implement scintillating bolometers that simultaneously detect temperature changes and scintillation light. The combinaison of these two observables can be used for particle identification and allow a better background rejection.  
 
 
 \subsubsection{LUCIFER}
 
 
 \NI LUCIFER (Low background Underground Cryogenics Installation for Elusive Rates) is an experiment which uses ZnSe crystals that act as both a bolometer and a scintillator. The combination of temperature and scintillation light measurements can be used for particle identification and allow a better background rejection. The crystals will contain $\sim$~18~kg of $^{\text{82}}$Se to reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~$\sim$~60~meV~\cite{LUCIFER} after years of data taking. This detector will serve as a prototype for the CUPID experiment (Cuore Upgrade with Particle IDentification) which is in the early phases of R\&D.
+
+
+\subsubsection{LUMINEU}
+
+
+\NI The Lumminescent Underground Molybdenum Investigation for NEUtrino mass and nature (LUMINEU) is a French R\&D programm to search for 0$\nu\beta\beta$ decay of $^{\text{100}}$Mo by using scintillating bolometer technique~\cite{LUMINEU}. The LUMINEU project aims to develop high-quality radiopure ZnMoO$_\text{4}$ crystals crystal scintillators of large mass (300 - 500~g) and test them as low-temperature detectors. The main aim of the project is to demonstrate feasibility of ZnMoO$_\text{4}$ based  cryogenic scintillating  bolometers for the future 0$\nu\beta\beta$ generation experiment. The LUMINEU project could lead to an experiment containing approximately 10~kg of $^{\text{100}}$Mo. A sensitivity of such experiment could reach a sensitivity on the 0$\nu\beta\beta$ half-life on the level of the best current experiments. By scaling up to the 100-1000~kg experiment could entirely cover the inverted ordering region~\cite{LUMINEU}.
+
 
 
 \subsection{Time projection chamber experiments}
